k3s/overlays/dev/phoenix-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phoenix-web
spec:
  template:
    spec:
      containers:
      - name: phoenix
